--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,10 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
+
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
+
     defaultConfig {
         applicationId "com.chaos.chaoscompass"
         minSdkVersion 21
@@ -14,17 +16,27 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.0"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
@@ -32,4 +44,22 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Material Design
+    implementation "com.google.android.material:material:$rootProject.materialVersion"
+
+    // permissions module
+    implementation 'com.nabinbhandari.android:permissions:3.8'
+
+    // privacy
+    implementation "androidx.browser:browser:1.2.0"
+
+    // card view
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    // rating bar lib
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
+
+    // play services library
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 }
