--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,9 @@ android {
 }
 
 dependencies {
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0'
@@ -62,4 +63,10 @@ dependencies {
 
     // play services library
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+    // ads manger
+    implementation project(path: ':adsmanager')
+
+    // lottie animation lib
+    implementation "com.airbnb.android:lottie:3.4.1"
 }
